--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,8 @@ dependencies:
     - "~/docker"
 
   override:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS 
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - cd server && mvn clean install
       - docker run -ti -v /var/run/docker.sock:/var/run/docker.sock -v $(pwd)/server:/build sillelien/cyborg-wrapper:0.1  sillelien/tutum-scheduler:${CIRCLE_BRANCH} scheduler
 
 test:
