--- a/circle.yml
+++ b/circle.yml
@@ -19,4 +19,4 @@ deployment:
     branch: /.*/
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS 
-      - docker push sillelien/tutum-scheduler:${CIRCLE_BRANCH}
+      - docker push sillelien/scheduler:${CIRCLE_BRANCH}
