--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,7 @@ dependencies:
   override:
       - sudo -H pip install docker-compose
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - ./build.sh
 
 test:
   override:
