--- a/circle.yml
+++ b/circle.yml
@@ -7,15 +7,12 @@ machine:
   java:
     version: oraclejdk8
 
-machine:
-  services:
-    - docker
-
 dependencies:
   cache_directories:
     - "~/docker"
 
   override:
+      -  ls -la /usr/lib/jvm
       - sudo -H pip install docker-compose
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - ./build.sh
