--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
   environment:
     release: 0.0.${CIRCLE_BUILD_NUM}
     MAVEN_OPTS: "-Xmx1g -DbuildNumber=${CIRCLE_BUILD_NUM} "
+    JAVA_HOME: /usr/lib/jvm/jdk1.8.0
   java:
     version: oraclejdk8
 
