--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,28 @@
 
-server:
+scheduler:
   build: .
   links:
     - test:test
+    - scserver:scserver
 
 test:
   image: sillelien/base-alpine:0.9.2
   command: "sleep 30"
+
+
+scserver:
+  image: sillelien/sc-server:0.0.19
+  volumes:
+    - tmp/config/server:/repo
+  ports:
+    - "1500"
+    - "9418"
+
+sceditor:
+  image: sillelien/sc-editor:0.0.19
+  volumes:
+    - tmp/config/editor:/config
+  links:
+    - scserver:scserver
+  ports:
+    - "8080:8080"
