--- a/server/pom.xml
+++ b/server/pom.xml
@@ -20,6 +20,11 @@
             <version>1.7.7</version>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.sillelien</groupId>
             <artifactId>dollar-core</artifactId>
             <version>0.1.71</version>
