--- a/circle.yml
+++ b/circle.yml
@@ -33,8 +33,8 @@ deployment:
       branch: master
       commands:
           - docker tag sillelien/scheduler:${CIRCLE_BRANCH} sillelien/scheduler
-          - docker tag sillelien/scheduler:${CIRCLE_BRANCH} sillelien/scheduler:$(cat .release)
           - docker push sillelien/scheduler
+          - docker tag sillelien/scheduler sillelien/scheduler:$(cat .release)
           - docker push sillelien/scheduler:$(cat .release)
 
 
